fix for css layout bug in default theme

--- a/github.css
+++ b/github.css
@@ -6,8 +6,6 @@
 	border-radius: 3px;
 	border: 1px solid rgba(0,0,0,0.4);
 	color: #444;
-	/*-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);  */
 }
 /*Utility styles*/
 .clear:after { content: "."; display: block; height: 0; clear: both; visibility: hidden;}
@@ -154,10 +152,9 @@ html[xmlns] .clear { display: block;}
 	border-top: 1px solid #868686;
 }
 #github #repos #github-loader {
-	width: 32px;
-	height: 32px;
-	margin: 75px auto;
-	background: url("https://a248.e.akamai.net/assets.github.com/images/spinners/octocat-spinner-32.gif") no-repeat;
+	width: 100%;
+	height: 200px;
+	background: url("https://a248.e.akamai.net/assets.github.com/images/spinners/octocat-spinner-32.gif") center no-repeat;
 }
 #github #repos ul {
 	display: none;
@@ -234,6 +231,15 @@ html[xmlns] .clear { display: block;}
 }
 #github #repos li {
 	position: relative;
+}
+#github #repos li:last-child {
+	-webkit-border-bottom-right-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+	-moz-background-clip: padding; 
+	-webkit-background-clip: padding-box; 
+	background-clip: padding-box;
 }
 #github #repos li .title a {
 	color: #444;
